--- a/02.html
+++ b/02.html
@@ -577,7 +577,7 @@
     <link rel="stylesheet" href="/dist/css/main.css" type="text/css" />
     <link rel="stylesheet" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/717829a48b5fad64747b7bf2f577ae731651100219.css?h=10dc8ebc953bcca66f4d94461b39da64" type="text/css" />
     <link rel="canonical" href="https://wnartdesign.com/ironhold-branding" />
-    <title>橙子动漫 - 橙子作品集</title>
+    <title>橙子动漫 - 案例02</title>
     <script type="text/javascript" src="//use.typekit.net/ik/2hyP9_jYVTxEKrRyOSCebwd1Yb6uql52SoR3-6R7Fj9fenCffHYEBsJzwD9oFDIDWDqUjDFcFRbDFh9UZAFcFRBRZRgRwcwuwesRZ2IoZ2mKw2MtwcJtwcJ-RbI7OcuoSeNkieZzde8zOcFzdP37O1gkdDJlic88ikolpWgzS1scdhUTdkoRdhXCHKoadcBkies8Sh81dKoRdhXCdW83da4XZcNC-Av0jhNlOYgkdDJlic88ikolpWgzS1scdhUTdkoRdhXCihoyS1sqZWFTZht0jhNlOYiaikoadcBkies8Sh81dKoRdhXKgeilShGKgYZRShX7fbRaPyMMeMI6MKG4fFJuIMMjMkMfH6qJDR9bMg6IJMJ7fbRbFsMMeMj6MKG4fFIVIMMjgkMfH6qJu29bMg64JMJ7fbKzMsMgeMb6MKG4fHXgIMIjgKMfH6qJK3IbMs6YJMHbMp0sotCe.js?cb=3542f9ec304c2dc19fc7fd80dd515314aade8328"
         async onload="
     try {
@@ -649,7 +649,7 @@
                     <section class="page standard-modules">
                       <header class="page-header content" data-context="pages" data-identity="id:p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05" data-hover-hint="pageHeader" data-hover-hint-id="p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05">
                         <h1 class="title preserve-whitespace e2e-site-logo-text">橙子动漫 | 橙子形象片</h1>
-                        <p class="description">10秒MG形象片&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                        <p class="description">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 10秒MG形象片&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                         </p>
 					
 						</header>
@@ -660,7 +660,7 @@
                               <div class="embed-dimensions" style="max-width: 800px; max-height: 450px; margin: 0 auto;">
                                 <div class="embed-aspect-ratio" style="padding-bottom: 56.25%; position: relative; height: 0;">
                                   <video width="100%" autoplay class=""controls="controls" >
-                                    <source src="video/橙子形象片.mp4" type="video/mp4">
+                                    <source src="video/02.橙子形象片.mp4" type="video/mp4">
                                   </video>
                                 </div>
                               </div>
