--- a/10.html
+++ b/10.html
@@ -649,7 +649,7 @@
                     <section class="page standard-modules">
                       <header class="page-header content" data-context="pages" data-identity="id:p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05" data-hover-hint="pageHeader" data-hover-hint-id="p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05">
                         <h1 class="title preserve-whitespace e2e-site-logo-text">资格证书 | 成为在线英语老师</h1>
-                        <p class="description">成为在线英语老师&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                        <p class="description">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;成为在线英语老师&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                         </p>
 					
 						</header>
@@ -688,31 +688,7 @@
                             <div class="js-lightbox" data-src="img/10/4.png"> <img class="js-lazy e2e-site-project-module-image" src="img/10/4.png" data-src="img/10/4.png"
    </div>
                           </div>
-                          <div class="project-module module image project-module-image js-js-project-module">
-                            <div class="js-lightbox" data-src="img/10/5.png"> <img class="js-lazy e2e-site-project-module-image" src="img/10/5.png" data-src="img/10/5.png"
-   </div>
-                          </div>
-                          <div class="project-module module image project-module-image js-js-project-module">
-                            <div class="js-lightbox" data-src="img/10/6.png"> <img class="js-lazy e2e-site-project-module-image" src="img/10/6.png" data-src="img/10/6.png"
-   </div>
-                          </div>
-                          <div class="project-module module image project-module-image js-js-project-module">
-                            <div class="js-lightbox" data-src="img/10/7.png"> <img class="js-lazy e2e-site-project-module-image" src="img/10/7.png" data-src="img/10/7.png"
-   </div>
-                          </div>
-                          <div class="project-module module image project-module-image js-js-project-module">
-                            <div class="js-lightbox" data-src="img/10/8.png"> <img class="js-lazy e2e-site-project-module-image" src="img/10/8.png" data-src="img/10/8.png"
-   </div>
-                          </div>
-                          <div class="project-module module image project-module-image js-js-project-module">
-                            <div class="js-lightbox" data-src="img/10/9.png"> <img class="js-lazy e2e-site-project-module-image" src="img/10/9.png" data-src="img/10/9.png"
-   </div>
-                          </div>
-                          <div class="project-module module image project-module-image js-js-project-module">
-                            <div class="js-lightbox" data-src="img/10/10.png"> <img class="js-lazy e2e-site-project-module-image" src="img/10/10.png" data-src="img/10/10.png"
-   </div>
-                          </div>
-                          </div>
+</div>
 </div>
                         </div>
                       </div>
