--- a/08.html
+++ b/08.html
@@ -649,7 +649,7 @@
                     <section class="page standard-modules">
                       <header class="page-header content" data-context="pages" data-identity="id:p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05" data-hover-hint="pageHeader" data-hover-hint-id="p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05">
                         <h1 class="title preserve-whitespace e2e-site-logo-text">活动促销 | 双十一</h1>
-                        <p class="description">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;双十一&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                        <p class="description">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;双十一&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                         </p>
 					
 						</header>
@@ -660,7 +660,7 @@
                               <div class="embed-dimensions" style="max-width: 800px; max-height: 450px; margin: 0 auto;">
                                 <div class="embed-aspect-ratio" style="padding-bottom: 56.25%; position: relative; height: 0;">
                                   <video width="100%" autoplay class=""controls="controls" >
-                                    <source src="video/08.活动促销  双十一" type="video/mp4">
+                                    <source src="video/08.活动促销  双十一.mp4" type="video/mp4">
                                   </video>
                                 </div>
                               </div>
