--- a/about.html
+++ b/about.html
@@ -586,8 +586,8 @@
 </head>
 
 <body class="transition-enabled">
-    <div class='page-background-video page-background-video-with-panel'>
-    </div>
+<div class='page-background-video page-background-video-with-panel'>
+</div>
     <div class="js-responsive-nav">
         <div class="responsive-nav has-social">
             <div class="close-responsive-click-area js-close-responsive-nav">
@@ -651,18 +651,18 @@
 
                                         <div class="project-module module text project-module-text align- js-project-module e2e-site-project-module-text">
                                             <div class="rich-text js-text-editable module-text">
-                                                <div style="text-align:left;"><span style="font-family:gmsj; font-style:normal; font-weight:600;"><span style="font-size:60px;"><span style="color:rgb(238, 238, 238); font-family:gmsj; font-style:normal; font-weight:700;">服务项目</span></span><br><br>IDENTITÉ
-                                                    VISUELLE / BRANDING</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Logotype</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Branding Personnel | Commercial</span><br>
+                                                <div style="text-align:left;"><span style="font-family:gmsj; font-style:normal; font-weight:600;"><span style="font-size:60px;"><span style="color:rgb(238, 238, 238); font-family:gmsj; font-style:normal; font-weight:700;">服务项目</span></span><br><br>
+                                                    品牌宣传&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Logotype</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Branding Personnel | Commercial</span><br>
                                                     <span
-                                                        style="font-family:gmsj; font-style:normal; font-weight:300;">- Branding de Mariage | Évènement</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">DESIGN PUBLICITAIRE</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Magazine | Journal | Impression publicitaire</span><br>
+                                                        style="font-family:gmsj; font-style:normal; font-weight:300;">- Branding de Mariage | Évènement</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">产品介绍</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Magazine | Journal | Impression publicitaire</span><br>
                                                         <span
-                                                            style="font-family:gmsj; font-style:normal; font-weight:300;">- Annonce en ligne | Campagne de développement</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Design pour média sociaux</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">DESIGN D'IMPRESSION ET DE PUBLICATION</span><br>
+                                                            style="font-family:gmsj; font-style:normal; font-weight:300;">- Annonce en ligne | Campagne de développement</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Design pour média sociaux</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">LOGO演绎</span><br>
                                                             <span
                                                                 style="font-family:gmsj; font-style:normal; font-weight:300;">- Matériel marketing | Cartes d’affaires | Affiche | Brochure</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Menu | Vêtement | Autocollant | Infographique | Skateboard</span><br>
                                                                 <span
-                                                                    style="font-family:gmsj; font-style:normal; font-weight:300;">- Habillage de véhicule | Affichage | Lettrage</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">CONCEPTION À LA MAIN</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Illustration vectoriel et à la main</span><br>
+                                                                    style="font-family:gmsj; font-style:normal; font-weight:300;">- Habillage de véhicule | Affichage | Lettrage</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">栏目片头</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Illustration vectoriel et à la main</span><br>
                                                                     <span
-                                                                        style="font-family:gmsj; font-style:normal; font-weight:300;">- Logo et typographie à la main</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">SERVICE CLÉ EN MAIN</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">Vous manquez de temps pour vous occuper</span><br>
+                                                                        style="font-family:gmsj; font-style:normal; font-weight:300;">- Logo et typographie à la main</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">公益宣传</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">Vous manquez de temps pour vous occuper</span><br>
                                                                         <span
                                                                             style="font-family:gmsj; font-style:normal; font-weight:300;">de l’impression de vos nouveaux designs?</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">Je peux le faire pour vous!</span><br></div>
                                             </div>
@@ -703,7 +703,10 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript">
+    <footer class="site-footer js-editable-target editable">
+      <div class="footer-text"> © 2022 橙子动漫. 版权所有. </div>
+    </footer>
+<script type="text/javascript">
         window.NREUM || (NREUM = {});
         NREUM.info = {
             "beacon": "bam.nr-data.net",
