--- a/contact.html
+++ b/contact.html
@@ -587,8 +587,8 @@
 </head>
 
 <body class="transition-enabled">
-    <div class='page-background-video page-background-video-with-panel'>
-    </div>
+<div class='page-background-video page-background-video-with-panel'>
+</div>
     <div class="js-responsive-nav">
         <div class="responsive-nav has-social">
             <div class="close-responsive-click-area js-close-responsive-nav">
@@ -658,10 +658,13 @@ padding-bottom: 0px;
   clear: both;
 ">
                                             <div class="rich-text js-text-editable module-text">
-                                                <div style="text-align:center;"><br><br><br><span style="font-family:gmsj; font-style:normal; font-weight:300;"></span><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;">联系方式<br><br></span></span>
-                                                    </span>6年的动画行业工作经验,<br>喜欢动态设计和动画制作.<br><br>热爱艺术创作,<br>无论是制作一条企业的宣传视频，<br>
-                                                    还是在生活中练习创作，我总是需要创造美丽的东西<br>
-                                                    这对你来说是个好消息。<br><br>写信给我讨论我们可以一起完成的项目.<br>如果你有什么想法，我会去做的，我会做得很好。<br><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;"><br></span></span>
+                                                <div style="text-align:center;"><br><br><br><span style="font-family:gmsj; font-style:normal; font-weight:300;"></span><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;">关于橙子动漫<br><br></span></span>
+                                                    </span>六年的动画行业工作经验,<br>喜欢动态设计和动画制作.<br><br>
+                                                    擅长动画形式创造社会价值<br>
+                                                    无论是制作一条企业的MG动画宣传视频，<br>
+                                                    还是在生活中练习创作，我总是需要创造美好的东西<br>
+                                                    这对你来说是个好消息。<br><br>
+                                                    写信告诉我们一起完成项目.<br>邮箱：2546279355@qq.com<br><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;"><br></span></span>
                                                     </span><span style="font-family:gmsj; font-style:normal; font-weight:700;"></span><br></div>
                                             </div>
                                         </div>
@@ -759,7 +762,10 @@ padding-bottom: 0px;
             </div>
         </div>
     </div>
-    <script type="text/javascript">
+    <footer class="site-footer js-editable-target editable">
+      <div class="footer-text"> © 2022 橙子动漫. 版权所有. </div>
+    </footer>
+<script type="text/javascript">
         window.NREUM || (NREUM = {});
         NREUM.info = {
             "beacon": "bam.nr-data.net",
