--- a/contact.html
+++ b/contact.html
@@ -659,12 +659,13 @@ padding-bottom: 0px;
 ">
                                             <div class="rich-text js-text-editable module-text">
                                                 <div style="text-align:center;"><br><br><br><span style="font-family:gmsj; font-style:normal; font-weight:300;"></span><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;">关于橙子动漫<br><br></span></span>
-                                                    </span>六年的动画行业工作经验,<br>喜欢动态设计和动画制作.<br><br>
-                                                    擅长动画形式创造社会价值<br>
+                                                    </span>专注于动态设计凝聚十年案例经验<br>
+                                                    丰富多彩的美学和清晰故事的叙述<br>
+                                                    通过动态设计将品牌故事带入生活<br><br>
                                                     无论是制作一条企业的MG动画宣传视频，<br>
-                                                    还是在生活中练习创作，我总是需要创造美好的东西<br>
+                                                    还是在生活中练习创作，<br>我总是需要创造美好的东西<br>
                                                     这对你来说是个好消息。<br><br>
-                                                    写信告诉我们一起完成项目.<br>邮箱：2546279355@qq.com<br><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;"><br></span></span>
+                                                    写信告诉我们一起完成项目.<br>邮箱：2546279355@qq.com<br>微信：2546279355<br><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;"><br></span></span>
                                                     </span><span style="font-family:gmsj; font-style:normal; font-weight:700;"></span><br></div>
                                             </div>
                                         </div>
